Fixed overflow issue with message preview on messages screen

--- a/src/Messages/MessagesScreen.css
+++ b/src/Messages/MessagesScreen.css
@@ -43,7 +43,7 @@
   height: 100%;
 }
 .line-1 {
-  height: 60%;
+  height: 55%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -55,11 +55,14 @@
   text-overflow: ellipsis;
 }
 .line-2 {
-  height: 40%;
+  height: 45%;
   display: flex;
   justify-content: space-between;
   position: relative;
   padding: unset !important;
+}
+.line-2 > p {
+  width: 90%;
 }
 .convo-button-wrapper {
   display: flex;
